--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "slim/psr7": "^1.3",
          "firebase/php-jwt": "^4.0",
          "oscarotero/psr7-middlewares": "^3.20",
-         "illuminate/database": "@dev",
+         "illuminate/database": "^11.11",
          "nyholm/psr7": "^1.4",
          "nyholm/psr7-server": "^1.0",
          "guzzlehttp/psr7": "^1.8",
